--- a/templates/aboutme.html
+++ b/templates/aboutme.html
@@ -3,7 +3,7 @@
 {% block site_selection %}{% endblock site_selection %}
 {% block content %}{% endblock content %}
 {% block search_results %}
-<div style="background-color: #fff;width: 100vw; height:100vh">
+<div style="background-color: #fff;min-width:1200px">
     <h4 style="text-align:center">A few brief words about Me </h4>
     <h5 style="text-align:center"><a style="align-items:center;text-align:center" href="http://www.linkedin.com/in/doug-mcintosh" target="_blank"><img src="static/assets/linkedin.png" alt="LinkedIn" height="50"></a></h5>
     <div style="display:flex;margin-top:5vh;margin-left:5vw;margin-right:10vw;overflow:hidden">
