--- a/templates/aboutthis.html
+++ b/templates/aboutthis.html
@@ -3,7 +3,7 @@
 {% block site_selection %}{% endblock site_selection %}
 {% block content %}{% endblock content %}
 {% block search_results %}
-<div style="text-align:center;background-color: #fff;width: 100vw; height:100vh">
+<div style="text-align:center;background-color: #fff">
     <h4>Wikipedia/Youtube Library</h4>
     <h5>A Flask Python Web App developed using Visual Studio and published on PythonAnywhere.com</h5>
     <a href="https://github.com/JackManu/portfolio" target="_blank"><img src="static/assets/github.png" alt="GitHub" height="35"></a>
