--- a/templates/comments.html
+++ b/templates/comments.html
@@ -3,7 +3,7 @@
 {% block site_selection %}{% endblock site_selection %}
 {% block content %}{% endblock content %}
 {% block search_results %}
-<div style="background-color: #fff;width:100vw;height:100vh">
+<div style="background-color: #fff;">
     <h4 style="text-align:center">Any feedback is appreciated.</h4>
     <div style="vertical-align:top;align-items:center;margin-right:1%">
         <form id="search" style="display:flex" action="{{ url_for('comments') }}" method="post">
