--- a/templates/progress_bar.html
+++ b/templates/progress_bar.html
@@ -7,11 +7,13 @@
 </div>
 <style>
     #myProgress {
-        height: 100px;
-        width:500px;
+        height: 15vh;
+        width:25vw;
         background-color: darkgrey;
         align-items: center;
         display: none;
+        justify-content:center;
+        align-items:center;
         position: relative;
         border: 1px solid black;
         margin-left:25vw;
@@ -20,7 +22,7 @@
 
     #progress_bar {
         width: 1%;
-        height: 30px;
+        height: 15%;
         background-color: #37324b;
         text-align: center;
         line-height: 30px;
