--- a/templates/youtube_search_results.html
+++ b/templates/youtube_search_results.html
@@ -4,7 +4,7 @@
 {% endblock content %}
 {% block search_results %}
 {% include 'nav_bar.html' %}
-<div style="text-align: center; background-color: #fff;width: 100vw; height:100vh">
+<div style="text-align: center; background-color: #fff;">
     <section style="background-color: #fff;">
         {% include 'error_modal.html' %}
         {% include 'progress_bar.html' %}
@@ -13,7 +13,7 @@
             <div style="margin-bottom:1vh;text-align:center;margin-top:1vh">
                 <h4>Add Youtube video(s): {{content[0]['search_text']}} <input type="submit" value="Save" /></h4>
             </div>
-            <div id="myData" style="width:100vw;height:65vh;overflow-y:scroll;margin-bottom:3vh;align-items:center;justify-content:center">
+            <div id="myData" style="min-width:1200px;height:65vh;overflow-y:scroll;margin-bottom:3vh;align-items:center;justify-content:center">
                 <div id="table-wrapper">
                     <div id="table-scroll">
                         <table>
