created base.html for cleaner inheritance.  use swiper logic for certifications page

--- a/templates/android_app.html
+++ b/templates/android_app.html
@@ -1,4 +1,4 @@
-{% extends "index.html" %}
+{% extends "base.html" %}
 {% block title %}Doug McIntosh Site Details{% endblock title %}
 {% block site_selection %}{% endblock site_selection %}
 {% block content %}{% endblock content %}
