--- a/templates/data_analysis.html
+++ b/templates/data_analysis.html
@@ -1,4 +1,4 @@
-{% extends "index.html" %}
+{% extends "base.html" %}
 
 {% block title %}Doug McIntosh Charts{% endblock %}
 <!--<div style="width:100vw;height:2vh;background-color:#37324b"></div>-->
