--- a/templates/site_traffic.html
+++ b/templates/site_traffic.html
@@ -1,4 +1,4 @@
-{% extends "index.html" %}
+{% extends "base.html" %}
 {% block site_selection %}{% endblock site_selection %}
 {% block content %}{% endblock content %}
 {% block search_results %}
