--- a/templates/wiki_search.html
+++ b/templates/wiki_search.html
@@ -1,4 +1,4 @@
-{% extends "index.html" %}
+{% extends "base.html" %}
 {% block title %}Doug McIntosh Library{% endblock %}
 {% block site_selection %}{% endblock site_selection %}
 {% block content %}{% endblock content %}
