--- a/templates/library_intro.html
+++ b/templates/library_intro.html
@@ -1,4 +1,4 @@
-{% extends "index.html" %}
+{% extends "base.html" %}
 {% block title %}Doug McIntosh Library{% endblock %}
 {% block content %}{% endblock content %}
 {% block search_results %}
