--- a/templates/site_selection_swiper.html
+++ b/templates/site_selection_swiper.html
@@ -21,9 +21,6 @@
                         <div class="swiper-slide client-box">
                             <h3 class="text-left"><a href="{{url_for('certifications')}}">Certifications</a></h3>
                         </div>
-                        <div class="swiper-slide client-box">
-                            <h3 class="text-left"><a href="{{url_for('blank')}}">something else</a></h3>
-                        </div>
                     </div>
                 </div>
                 <!-- Add Arrows -->
@@ -38,42 +35,43 @@
 <!-- Initialize Client Swiper -->
 <script>
     var swiper1 = new Swiper('.client-swiper', {
-            slidesPerView: 3,
-            paginationClickable: true,
-            nextButton: '.swiper-button-next',
-            prevButton: '.swiper-button-prev',
-            spaceBetween: 60,
-            // Responsive breakpoints
-            breakpoints: {
-                // when window width is <= 320px
-                320: {
-                    slidesPerView: 1,
-                    spaceBetween: 10,
-                    pagination: '.swiper-pagination'
-                },
-                // when window width is <= 480px
-                480: {
-                    slidesPerView: 1,
-                    spaceBetween: 20
-                },
-                // when window width is <= 640px
-                640: {
-                    slidesPerView: 1,
-                    spaceBetween: 30
-                }
+        slidesPerView: 3,
+        paginationClickable: true,
+        nextButton: '.swiper-button-next',
+        prevButton: '.swiper-button-prev',
+        spaceBetween: 60,
+        // Responsive breakpoints
+        breakpoints: {
+            // when window width is <= 320px
+            320: {
+                slidesPerView: 1,
+                spaceBetween: 10,
+                pagination: '.swiper-pagination'
+            },
+            // when window width is <= 480px
+            480: {
+                slidesPerView: 1,
+                spaceBetween: 20
+            },
+            // when window width is <= 640px
+            640: {
+                slidesPerView: 1,
+                spaceBetween: 30
             }
+        }
     });
 </script>
 <!--<script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>-->
 <script src="static/js/jquery.counterup.min.js"></script>
-<script>// Counterup
-        $('.counter').counterUp({
-            time: 1000
-        });
+<script>
+    // Counterup
+    $('.counter').counterUp({
+        time: 1000
+    });
 
-        // Main Navigation
-        $('#menu-toggle').click(function () {
-            $(this).toggleClass('open'),
-                $('.main-nav').toggleClass('show-it');
-        })
+    // Main Navigation
+    $('#menu-toggle').click(function () {
+        $(this).toggleClass('open'),
+            $('.main-nav').toggleClass('show-it');
+    })
 </script>
